<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".rectangle">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/rectangle_tv_rectangle_wight"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/rectangle_tv_rectangle_wight"
            android:textAllCaps="true"
            android:textColor="#673AB7"
            android:textColorHint="#0E0909"
            android:textSize="30sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/rectangle_tv_rectangle_height"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/rectangle_tv_rectangle_height"
            android:textAllCaps="true"
            android:textColor="#673AB7"
            android:textColorHint="#0B0808"
            android:textSize="30sp"
            android:textStyle="bold" />

    </LinearLayout>

    <Button
        android:id="@+id/rectangle_bt_calculate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAllCaps="true"
        android:hint="@string/rectangle_bt_calculate"
        android:textColorHint="#130D0D"
        android:textSize="20sp" />
</LinearLayout>