<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/areas_bt_rectangle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/areas_tv_rectangle"
            android:ems="10"
            android:inputType="numberPassword"
            android:textAllCaps="true"
            android:textColor="#673AB7"
            android:textColorHint="#0E0909"
            android:textSize="30sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/areas_bt_trangle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/areas_tv_trangle"
            android:inputType="numberPassword"
            android:textAllCaps="true"
            android:textColor="#673AB7"
            android:textColorHint="#0B0808"
            android:textSize="30sp"
            android:textStyle="bold" />

    </LinearLayout>

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="#009688"
        android:gravity="center_horizontal"
        android:textSize="30sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/areas_bt_calculate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/areas_bt_calculate"
        android:inputType="numberPassword"
        android:textAllCaps="true"
        android:textColor="#673AB7"
        android:textColorHint="#0B0808"
        android:textSize="30sp"
        android:textStyle="bold"
        tools:ignore="TextViewEdits" />

</LinearLayout>